# mgzip

./: .gitignore  4g-patch.tar  ChangeLog  Makefile.AIX  Makefile.ALPHA  Makefile.Linux  Makefile.in  README  concat.patch  config.h.in  configure  configure.in  die.c  die.h  get_options.c  mgzip.c  mgzip.h  queue.c  queue.h  test_suite.sh  version.awk  version.h
